# LMS-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  books.txt  lib  library.cpp  library.db  代码规范.md
src/: book.cpp  book.h  library.cpp  library.h  main.cpp
tests/: test_library.cpp
